--- a/react-state-mngt/src/App.css
+++ b/react-state-mngt/src/App.css
@@ -5,7 +5,15 @@
   text-align: center;
 }
 
-.logo {
+/* .nameList-container {
+  border: 1px solid red;
+}
+
+.form-container {
+  border: 1px solid green;
+} */
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -16,9 +24,9 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -31,12 +39,12 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
-.card {
+/* .card {
   padding: 2em;
 }
 
 .read-the-docs {
   color: #888;
-}
+} */
